[gd_scene load_steps=7 format=3 uid="uid://bglmssvn1eiqd"]

[ext_resource type="Script" path="res://addons/sprite-shader-mixer/src/extension/ExtensionView.gd" id="1_vng8e"]
[ext_resource type="Texture2D" uid="uid://b00p80u83d33j" path="res://addons/sprite-shader-mixer/assets/icons/Sprite2DShaderMixer.svg" id="2_yq7l3"]
[ext_resource type="Texture2D" uid="uid://t0cto3il2buo" path="res://addons/sprite-shader-mixer/assets/icons/add.svg" id="3_0ho1l"]
[ext_resource type="Texture2D" uid="uid://nsea1n1hugod" path="res://addons/sprite-shader-mixer/assets/icons/right.svg" id="3_8det7"]
[ext_resource type="Texture2D" uid="uid://b1rygy2x8jbew" path="res://addons/sprite-shader-mixer/assets/icons/download.svg" id="4_cshyv"]
[ext_resource type="Texture2D" uid="uid://b30x1ipn1kw8j" path="res://addons/sprite-shader-mixer/assets/icons/sync.svg" id="5_nwx26"]

[node name="main" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
script = ExtResource("1_vng8e")

[node name="marginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="create_container" type="Control" parent="marginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="button_create" type="Button" parent="marginContainer/create_container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -15.5
offset_right = 74.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Create Shader Mixer"
icon = ExtResource("2_yq7l3")

[node name="shader_container" type="VBoxContainer" parent="marginContainer"]
layout_mode = 2

[node name="label_selectShader" type="Label" parent="marginContainer/shader_container"]
layout_mode = 2
text = "Select Shader to Add"

[node name="HBoxContainer" type="HBoxContainer" parent="marginContainer/shader_container"]
layout_mode = 2

[node name="option_shaders" type="OptionButton" parent="marginContainer/shader_container/HBoxContainer"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2

[node name="button_manager" type="Button" parent="marginContainer/shader_container/HBoxContainer"]
layout_mode = 2
text = "..."

[node name="button_addShader" type="Button" parent="marginContainer/shader_container/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0, 0.764706, 0, 1)
text = "add"
icon = ExtResource("3_0ho1l")

[node name="button_download" type="Button" parent="marginContainer/shader_container/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0, 0.764706, 0, 1)
text = "Download"
icon = ExtResource("4_cshyv")

[node name="button_sync" type="Button" parent="marginContainer/shader_container/HBoxContainer"]
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0, 0.764706, 0, 1)
text = "Sync List"
icon = ExtResource("5_nwx26")

[node name="HSeparator" type="HSeparator" parent="marginContainer/shader_container"]
layout_mode = 2

[node name="Label2" type="Label" parent="marginContainer/shader_container"]
layout_mode = 2
text = "Current List of Shaders Added can be manipulated at the Material->Shader exported properties"
autowrap_mode = 3
max_lines_visible = 3

[node name="HSeparator2" type="HSeparator" parent="marginContainer/shader_container"]
layout_mode = 2

[node name="currentShadersTitle" type="Button" parent="marginContainer/shader_container"]
layout_mode = 2
toggle_mode = true
text = "List of Current Shaders"
icon = ExtResource("3_8det7")
alignment = 0

[node name="shaders_selected_container" type="VBoxContainer" parent="marginContainer/shader_container"]
visible = false
layout_mode = 2
